@@ -352,10 +352,10 @@ pygame.display.update([rectstyle]) -> None
 This call will update a section (or sections) of the display
 screen. You must update an area of your display when you change
 its contents. If passed with no arguments, this will update the
-entire display surface. If you have many lists that need
+entire display surface. If you have many rects that need
 updating, it is best to combine them into a sequence and pass
 them all at once. This call will accept a sequence of rectstyle
-arguments
+arguments. (any None's in the list will be ignored.
 </ul><br>&nbsp;<br>
 
 
